# hacky-account-manager

./: Cargo.toml  flake.nix
src/: app_state.rs  database.rs  device_info.rs  lib.rs  main.rs  planificator.rs
src/boinc_api/: mod.rs  project_config.rs  proxy_root.rs  proxy_scheduler.rs  rpc.rs  xml_response.rs
