[package]
name = "boinc-accoung-manager-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
anyhow = "1.0.70"
awc = { version = "3.1.1", features = ["rustls"] }
env_logger = "0.10.0"
log = "0.4.17"
quick-xml = { version = "0.28.2", features = ["serde", "serde-types", "serialize", "overlapped-lists"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clap = { version = "4.2.5", features = ["derive"] }
